--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="content">
         <img src="images/selfie.png" alt="Chandy's Pic" width="250" height="300" ALIGN="right">   
         <h1>Hi, I'm Chandy and I'm glad you are here!</h1>
-        <h2>My focus is results-oriented Product DesignDOING A QUICK TEST</h2>
+        <h2>My focus is results-oriented Product Design</h2>
         <p>
             I have spent the past 10+ years working at corporations and helping them increase 
             revenue through the use of effective marketing and advertising. I am passionate about 
@@ -38,12 +38,35 @@
             organization will experience an increase in sales and profitability. Investing in the User 
             Experience is one of the best business decisions you can make!
                     </p>
-                    <img src="images/UXSkills.png" alt="Chandy's Pic" width="180" height="210" ALIGN="left">   
-                    <img src="images/MKTGSkills.png" alt="Chandy's Pic" width="180" height="210" ALIGN="center">   
-                    <img src="images/BSkills.png" alt="Chandy's Pic" width="180" height="210" ALIGN="center">   
         <button>Download Resume</button>      
-       
     </div>
+<section class=myWork>
+        <h1>My Work</h1>
+        <div class="workGrid">
+            <div class="projectImages">
+                <img src="images/selfie.png" alt="Chandy's Pic" width="250" height="300" ALIGN="right">   
+            </div>
+            <div>
+                <h4></h4>
+                <p></p>
+                <button></button>
+            </div>
+            <div class="projectImages2">
+                <img src="images/selfie.png" alt="Chandy's Pic" width="250" height="300" ALIGN="right">   
+            </div>
+            <div>
+                <h4></h4>
+                <p></p>
+                <button></button>
+            </div>
+            <h3>View all projects.</h3>    
+
+        </div>
+
+
+
+
+</section>
 
     <footer>
         <ul>
