Update CSS MY UX Skills
Basic Layout & changes

--- a/index.html
+++ b/index.html
@@ -40,10 +40,33 @@
                     </p>
         <button>Download Resume</button>      
     </div>
-<section class=myWork>
+    
+<!--My UX Skills section coded using CSS flex-->
+    <section class=mySkills>
+        <h1>My UX Skills</h1>
+        <div class="flexContainer">
+            <div class="child">
+                <img src="images/selfie.png" alt="Chandy's Pic" width="250" height="300" ALIGN="right">   
+                <h3></h3>    
+                <p></p>
+            </div>
+            <div class="child">
+                <img src="images/selfie.png" alt="Chandy's Pic" width="250" height="300" ALIGN="right">   
+                <h3></h3>    
+                <p></p>
+            </div>
+            <div class="child">
+                <img src="images/selfie.png" alt="Chandy's Pic" width="250" height="300" ALIGN="right">   
+                <h3></h3>    
+                <p></p>
+            </div>
+        </div>    
+    </section>    
+
+    <section class=myWork>
         <h1>My Work</h1>
         <div class="workGrid">
-            <div class="projectImages">
+            <div>
                 <img src="images/selfie.png" alt="Chandy's Pic" width="250" height="300" ALIGN="right">   
             </div>
             <div>
@@ -51,7 +74,7 @@
                 <p></p>
                 <button></button>
             </div>
-            <div class="projectImages2">
+            <div>
                 <img src="images/selfie.png" alt="Chandy's Pic" width="250" height="300" ALIGN="right">   
             </div>
             <div>
@@ -59,6 +82,7 @@
                 <p></p>
                 <button></button>
             </div>
+
             <h3>View all projects.</h3>    
 
         </div>
