--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="content">
         <h1>My UX Skills</h1>
         <div class="flexContainer">
-            <div class="child">
+            <div id="child">
                 <h3>UX Skills</h3>    
                 <p>Research, problem
                     definition, user needs
@@ -54,14 +54,14 @@
                     testing, iterating,
                     implementing</p>
             </div>
-            <div class="child">
+            <div id="child">
                 <h3>Marketing Skills</h3>    
                 <p>SEM, digital marketing, advertising, PPC, 
                     tracking KPI’s, branding
                     & positioning, project
                     management</p>
             </div>
-            <div class="child">
+            <div id="child">
                 <h3>Business Skills</h3>    
                 <p>Profitability analysis,
                     program management,
@@ -74,12 +74,10 @@
     </section>    
 <!--My Work Section Constructed using CSS Grid-->
     <section class=myWork>
-        
-        
         <div class="content">
             <h1>My Work</h1>
         </div>
-        <div class="workGrid">
+        <div id="workGrid">
                 <div>
                 <img src="images/Elevate1Life.png" alt="Elevate 1 Life" width="400" height="250" ALIGN="center">
                 <h4>Elevate 1 Life, Non-profit Redesign</h4>   
