Final week 18 changes
updates sections, worked with instructor for responsiveness

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 
 <body>
+
+    <!-- MAIN NAV SECTION -->
     <nav>
         <div class="block_element">
             <ul>
@@ -16,7 +18,8 @@
             </ul>
         </div>
     </nav>
-
+    
+    <!-- HERO CONTENT SECTION -->
     <section class="heroImg">
         <div class="content">
             <img src="images/selfie.png" alt="Chandy's Pic" width="250" height="300" ALIGN="right">
@@ -42,7 +45,8 @@
             <button>Download Resume</button>
         </div>
     </section>
-        <!--My UX Skills section coded using CSS flex-->
+
+    <!--My UX Skills section coded using CSS flex-->
     <section class=mySkills>
         <div class="content">
             <h1>My UX Skills</h1>
@@ -71,43 +75,46 @@
                             understanding new
                             technology</p>
                 </div>
+            </div>
         </div>
     </section>
-        <!--My Work Section Constructed using CSS Grid-->
-        <section class=myWork>
-            <div class="content">
-                <h1>My Work</h1>
+
+    <!--My Work Section Constructed using CSS Grid-->
+    <section class=myWork>
+        <div class="content">
+            <h1>My Work</h1>
+        </div>
+        <div id="workGrid">
+            <div>
+                <img src="images/Elevate1Life.png" alt="Elevate 1 Life" width="400" height="250" ALIGN="center">
+                <h4>Elevate 1 Life, Non-profit Redesign</h4>
             </div>
-            <div id="workGrid">
-                <div>
-                    <img src="images/Elevate1Life.png" alt="Elevate 1 Life" width="400" height="250" ALIGN="center">
-                    <h4>Elevate 1 Life, Non-profit Redesign</h4>
-                </div>
-                <div>
-                    <img src="images/FTCImage.png" alt="FTC Image" width="400" height="250" ALIGN="center">
-                    <h4>FTC.gov, Governmental Redesign</h4>
-                </div>
-                <div>
-                    <img src="images/MyCustomVacayImage.png" alt="My Custom Vacay Image" width="400" height="250"
-                        ALIGN="center">
-                    <h4>My Custom Vacation, Mobile App</h4>
-                </div>
-                <div>
-                    <img src="images/DIYImage.png" alt="DIY Image" width="400" height="250" ALIGN="center">
-                    <h4>Do-It! Professional, Mobile App</h4>
-                </div>
+            <div>
+                <img src="images/FTCImage.png" alt="FTC Image" width="400" height="250" ALIGN="center">
+                <h4>FTC.gov, Governmental Redesign</h4>
             </div>
-            <h5>View all projects.</h5>
-        </section>
+            <div>
+                <img src="images/MyCustomVacayImage.png" alt="My Custom Vacay Image" width="400" height="250"
+                    ALIGN="center">
+                <h4>My Custom Vacation, Mobile App</h4>
+            </div>
+            <div>
+                <img src="images/DIYImage.png" alt="DIY Image" width="400" height="250" ALIGN="center">
+                <h4>Do-It! Professional, Mobile App</h4>
+            </div>
+        </div>
+        <h5>View all projects.</h5>
+    </section>
         
-        <footer>
-            <ul>
-                <li class="inline-block">Work</li>
-                <li class="inline-block">About</li>
-                <li class="inline-block">Resume</li>
-            </ul>
 
-        </footer>
+    <!-- FOOTER SECTION -->
+    <footer>
+        <ul>
+            <li class="inline-block">Work</li>
+            <li class="inline-block">About</li>
+            <li class="inline-block">Resume</li>
+        </ul>
+
+    </footer>
 </body>
-
 </html>
